--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "dependencies": {
     "clsx": "^2.1.0",
+    "cookies-next": "^4.1.1",
     "lucide-react": "^0.316.0",
+    "near-api-js": "^3.0.3",
     "next": "^14.1.0",
     "next-pwa": "^5.6.0",
     "next-seo": "^6.4.0",
