--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@near-wallet-selector/ledger": "^8.9.5",
+    "@near-wallet-selector/modal-ui": "^8.9.5",
+    "@near-wallet-selector/my-near-wallet": "^8.9.5",
     "clsx": "^2.1.0",
     "cookies-next": "^4.1.1",
     "lucide-react": "^0.316.0",
@@ -32,6 +35,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
+    "styles.css": "link:@near-wallet-selector/modal-ui/styles.css",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
