--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@near-wallet-selector/ledger": "^8.9.5",
     "@near-wallet-selector/modal-ui": "^8.9.5",
     "@near-wallet-selector/my-near-wallet": "^8.9.5",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cookies-next": "^4.1.1",
     "lucide-react": "^0.316.0",
@@ -36,7 +38,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
     "styles.css": "link:@near-wallet-selector/modal-ui/styles.css",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.6.0",
