--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,9 @@
     "sznm/react",
     "plugin:react/jsx-runtime",
     "plugin:@next/next/recommended"
-  ]
+  ],
+  "rules": {
+    "react/prop-types": "off"
+  }
 }
+
