--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "@near-wallet-selector/ledger": "^8.9.5",
     "@near-wallet-selector/modal-ui": "^8.9.5",
     "@near-wallet-selector/my-near-wallet": "^8.9.5",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
@@ -46,8 +47,8 @@
     "styles.css": "link:@near-wallet-selector/modal-ui/styles.css",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4",
-    "vaul": "^0.9.0"
+    "vaul": "^0.9.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.6.0",
@@ -72,5 +73,6 @@
     "typescript": "5.3.3"
   },
   "engines": {
-    "node": ">=16.8.x"  }
+    "node": ">=16.8.x"
+  }
 }
