--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@capacitor/haptics": "^5.0.7",
     "@hookform/resolvers": "^3.3.4",
     "@near-wallet-selector/ledger": "^8.9.5",
     "@near-wallet-selector/modal-ui": "^8.9.5",
