--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@mapbox/search-js-react": "^1.0.0-beta.18",
     "@near-wallet-selector/ledger": "^8.9.5",
     "@near-wallet-selector/modal-ui": "^8.9.5",
     "@near-wallet-selector/my-near-wallet": "^8.9.5",
@@ -37,6 +38,7 @@
     "cookies-next": "^4.1.1",
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.316.0",
+    "mapbox-gl": "^3.1.2",
     "near-api-js": "^3.0.3",
     "next": "^14.1.0",
     "next-pwa": "^5.6.0",
@@ -47,6 +49,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
+    "react-map-gl": "^7.1.7",
+    "react-mapbox-gl": "^5.1.1",
     "styles.css": "link:@near-wallet-selector/modal-ui/styles.css",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
