--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-icons": "^5.0.1",
     "react-map-gl": "^7.1.7",
     "react-mapbox-gl": "^5.1.1",
+    "sharp": "^0.33.2",
     "styles.css": "link:@near-wallet-selector/modal-ui/styles.css",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
