--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build-contract": "cd src/contracts && bash build.sh && cd ../..",
     "build:turbo": "pnpm dlx turbo@latest build",
     "postbuild": "next-sitemap --config next-sitemap.config.js",
     "start": "next start",
@@ -21,8 +22,13 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@keypom/core": "1.0.2",
     "clsx": "^2.1.0",
     "lucide-react": "^0.316.0",
+    "near-api-js": "2.1.4",
+    "@near-js/accounts": "0.1.3",
+    "@near-js/signers": "0.0.4",
+    "@near-js/transactions": "0.2.0",
     "next": "^14.1.0",
     "next-pwa": "^5.6.0",
     "next-seo": "^6.4.0",
