--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@tanstack/react-query": "^5.24.1",
     "@types/lodash.debounce": "^4.0.9",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cookies-next": "^4.1.1",
+    "date-fns": "^3.3.1",
     "embla-carousel-react": "^8.0.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.316.0",
