--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cookies-next": "^4.1.1",
     "date-fns": "^3.3.1",
     "embla-carousel-react": "^8.0.0",
+    "framer-motion": "^11.0.8",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.316.0",
     "mapbox-gl": "^3.1.2",
