--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@keypom/core": "1.0.2",
     "@hookform/resolvers": "^3.3.4",
+    "@keypom/core": "1.0.2",
     "@mapbox/search-js-react": "^1.0.0-beta.18",
+    "@near-js/accounts": "0.1.3",
+    "@near-js/signers": "0.0.4",
+    "@near-js/transactions": "0.2.0",
     "@near-wallet-selector/ledger": "^8.9.5",
     "@near-wallet-selector/modal-ui": "^8.9.5",
     "@near-wallet-selector/my-near-wallet": "^8.9.5",
@@ -43,10 +46,6 @@
     "embla-carousel-react": "^8.0.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.316.0",
-    "near-api-js": "2.1.4",
-    "@near-js/accounts": "0.1.3",
-    "@near-js/signers": "0.0.4",
-    "@near-js/transactions": "0.2.0",
     "mapbox-gl": "^3.1.2",
     "near-api-js": "^3.0.3",
     "next": "^14.1.0",
@@ -60,6 +59,7 @@
     "react-icons": "^5.0.1",
     "react-map-gl": "^7.1.7",
     "react-mapbox-gl": "^5.1.1",
+    "react-qrcode-logo": "^2.9.0",
     "sharp": "^0.33.2",
     "styles.css": "link:@near-wallet-selector/modal-ui/styles.css",
     "tailwind-merge": "^2.2.1",
