--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-icons": "^5.0.1",
     "react-map-gl": "^7.1.7",
     "react-mapbox-gl": "^5.1.1",
+    "react-qr-reader": "3.0.0-beta-1",
     "react-qrcode-logo": "^2.9.0",
     "sharp": "^0.33.2",
     "styles.css": "link:@near-wallet-selector/modal-ui/styles.css",
