--- a/package.json
+++ b/package.json
@@ -36,9 +36,13 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@types/lodash.debounce": "^4.0.9",
+    "@vercel/kv": "^1.0.1",
+    "ai": "^3.0.0",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -47,20 +51,29 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.316.0",
     "mapbox-gl": "^3.1.2",
+    "nanoid": "^5.0.6",
     "near-api-js": "^3.0.3",
     "next": "^14.1.0",
     "next-pwa": "^5.6.0",
     "next-seo": "^6.4.0",
     "next-themes": "^0.2.1",
     "offline-plugin": "^5.0.7",
+    "openai": "^4.28.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.1",
     "react-map-gl": "^7.1.7",
     "react-mapbox-gl": "^5.1.1",
+    "react-markdown": "^9.0.1",
     "react-qr-reader": "3.0.0-beta-1",
     "react-qrcode-logo": "^2.9.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-textarea-autosize": "^8.5.3",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "sharp": "^0.33.2",
     "styles.css": "link:@near-wallet-selector/modal-ui/styles.css",
     "tailwind-merge": "^2.2.1",
