--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
-    "@tanstack/react-query": "^5.24.1",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.24.1",
     "@types/lodash.debounce": "^4.0.9",
     "@vercel/kv": "^1.0.1",
     "ai": "^3.0.0",
@@ -62,6 +62,7 @@
     "next-themes": "^0.2.1",
     "offline-plugin": "^5.0.7",
     "openai": "^4.28.4",
+    "prism": "link:react-syntax-highlighter/dist/cjs/styles/prism",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
