--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@commitlint/cz-commitlint": "^18.6.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/react": "18.2.48",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "autoprefixer": "^10.4.17",
     "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
