--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@types/lodash.debounce": "^4.0.9",
     "@vercel/kv": "^1.0.1",
+    "@xmtp/react-sdk": "^5.1.0",
     "ai": "^3.0.0",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
