--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mapbox-gl": "^3.1.2",
     "nanoid": "^5.0.6",
     "near-api-js": "^3.0.3",
+    "near-wallet-selector": "^2.1.0",
     "next": "^14.1.0",
     "next-pwa": "^5.6.0",
     "next-seo": "^6.4.0",
