--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@near-js/accounts": "0.1.3",
     "@near-js/signers": "0.0.4",
     "@near-js/transactions": "0.2.0",
+    "@near-wallet-selector/ledger": "^8.9.5",
     "@near-wallet-selector/modal-ui": "^8.9.5",
     "@near-wallet-selector/my-near-wallet": "^8.9.5",
     "@radix-ui/react-avatar": "^1.0.4",
