--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "vaul": "^0.9.0",
     "zod": "^3.22.4"
   },
+  "packageManager": "pnpm@7.25.0",
   "devDependencies": {
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
