--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "vaul": "^0.9.0",
     "zod": "^3.22.4"
   },
+  "packageManager": "pnpm@7.26.0",
   "devDependencies": {
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
