--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@near-js/accounts": "0.1.3",
     "@near-js/signers": "0.0.4",
     "@near-js/transactions": "0.2.0",
-    "@near-wallet-selector/ledger": "^8.9.5",
+    "@near-wallet-selector/core": "^8.9.5",
     "@near-wallet-selector/modal-ui": "^8.9.5",
     "@near-wallet-selector/my-near-wallet": "^8.9.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -103,7 +103,10 @@
     "@commitlint/cz-commitlint": "^18.6.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/react": "18.2.48",
+    "@types/react-blockies": "^1.4.4",
     "@types/react-syntax-highlighter": "^15.5.11",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
     "autoprefixer": "^10.4.17",
     "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
