--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@keypom/core": "1.0.2",
-    "@mapbox/search-js-react": "^1.0.0-beta.18",
+    "@mapbox/search-js-react": "1.0.0-beta.18",
     "@near-js/accounts": "0.1.3",
     "@near-js/signers": "0.0.4",
     "@near-js/transactions": "0.2.0",
@@ -54,20 +54,20 @@
     "install": "^0.13.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.316.0",
-    "mapbox-gl": "^3.1.2",
+    "mapbox-gl": "^3.2.0",
     "nanoid": "^5.0.6",
     "near-api-js": "^3.0.3",
     "near-wallet-selector": "^2.1.0",
-    "next": "^14.1.0",
+    "next": "^14.1.1",
     "next-pwa": "^5.6.0",
-    "next-seo": "^6.4.0",
+    "next-seo": "^6.5.0",
     "next-themes": "^0.2.1",
     "offline-plugin": "^5.0.7",
     "openai": "^4.28.4",
     "prism": "link:react-syntax-highlighter/dist/cjs/styles/prism",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.50.1",
+    "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.1",
@@ -90,22 +90,22 @@
   },
   "packageManager": "pnpm@7.26.0",
   "devDependencies": {
-    "@commitlint/cli": "^18.6.0",
-    "@commitlint/config-conventional": "^18.6.0",
-    "@commitlint/cz-commitlint": "^18.6.0",
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.2",
+    "@commitlint/cz-commitlint": "^18.6.1",
     "@tailwindcss/typography": "^0.5.10",
     "@types/react": "18.2.48",
     "@types/react-syntax-highlighter": "^15.5.11",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.18",
     "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.1",
     "eslint-config-sznm": "^2.0.2",
-    "husky": "^9.0.6",
-    "lint-staged": "^15.2.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "next-sitemap": "^4.2.3",
-    "postcss": "^8.4.33",
+    "postcss": "^8.4.35",
     "prettier": "3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "standard-version": "^9.5.0",
