--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "styles.css": "link:@near-wallet-selector/modal-ui/styles.css",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "types": "link:next-themes/dist/types",
     "vaul": "^0.9.0",
     "zod": "^3.22.4"
   },
