--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@heroicons/react": "^1.0.6",
     "@hookform/resolvers": "^3.3.4",
     "@keypom/core": "1.0.2",
-    "@mapbox/search-js-react": "^1.0.0-beta.18",
+    "@mapbox/search-js-react": "1.0.0-beta.18",
     "@near-js/accounts": "0.1.3",
     "@near-js/signers": "0.0.4",
     "@near-js/transactions": "0.2.0",
@@ -48,7 +48,7 @@
     "@walletconnect/web3-provider": "^1.8.0",
     "@xmtp/react-sdk": "^5.1.0",
     "@xmtp/xmtp-js": "^11.4.1",
-    "ai": "^3.0.0",
+    "ai": "^3.0.2",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -59,13 +59,13 @@
     "framer-motion": "^11.0.8",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.316.0",
-    "mapbox-gl": "^3.1.2",
+    "mapbox-gl": "^3.2.0",
     "nanoid": "^5.0.6",
     "near-api-js": "^3.0.3",
     "near-wallet-selector": "^2.1.0",
-    "next": "^14.1.0",
+    "next": "^14.1.1",
     "next-pwa": "^5.6.0",
-    "next-seo": "^6.4.0",
+    "next-seo": "^6.5.0",
     "next-themes": "^0.2.1",
     "offline-plugin": "^5.0.7",
     "openai": "^4.28.4",
@@ -74,7 +74,7 @@
     "react-blockies": "^1.4.1",
     "react-dom": "18.2.0",
     "react-emoji-render": "^2.0.1",
-    "react-hook-form": "^7.50.1",
+    "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-infinite-scroll-component": "^6.1.0",
@@ -101,25 +101,25 @@
   },
   "packageManager": "pnpm@7.26.0",
   "devDependencies": {
-    "@commitlint/cli": "^18.6.0",
-    "@commitlint/config-conventional": "^18.6.0",
-    "@commitlint/cz-commitlint": "^18.6.0",
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.2",
+    "@commitlint/cz-commitlint": "^18.6.1",
     "@tailwindcss/typography": "^0.5.10",
     "@types/react": "18.2.48",
     "@types/react-blockies": "^1.4.4",
     "@types/react-syntax-highlighter": "^15.5.11",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.18",
     "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.1",
     "eslint-config-sznm": "^2.0.2",
-    "husky": "^9.0.6",
-    "lint-staged": "^15.2.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "next-sitemap": "^4.2.3",
-    "postcss": "^8.4.33",
+    "postcss": "^8.4.35",
     "prettier": "3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "standard-version": "^9.5.0",
